--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,48 +1,3 @@
-<!-- <mdb-carousel [interval]="4500" [noPause]="true" class="carousel slide carousel-fade" [animation]="'fade'"
-    style="position: relative;">
-    <mdb-carousel-item>
-
-        <video class="video-fluid mw-100" autoplay loop muted>
-            <source src="https://media.giphy.com/media/cmxX2I3WTb6PqRK1jx/giphy.mp4" type="video/mp4">
-
-
-        </video>
-        <div class="posicion" style="position: absolute;">
-            <h2 (click)="onClick()">Se acabo jugar solo a tus juegos preferidos</h2>
-            <p>EMPIEZA YA! <i class="fas fa-angle-double-down"></i></p>
-        </div>
-
-    </mdb-carousel-item>
-    <mdb-carousel-item>
-        <video class="video-fluid" autoplay loop muted>
-            <source src="https://media.giphy.com/media/1xpCkcxtaGERQNVku0/giphy.mp4" type="video/mp4" />
-        </video>
-        <div class="posicion" style="position: absolute;">
-            <h2>Se acabó jugar solo a tus juegos preferidos</h2>
-            <p>EMPIEZA YA! <i class="fas fa-angle-double-down"></i> </p>
-
-        </div>
-    </mdb-carousel-item>
-    <mdb-carousel-item>
-        <video class="video-fluid" autoplay loop muted>
-            <source src="https://media.giphy.com/media/EqyQ1DnLynrhR1eo6B/giphy.mp4" type="video/mp4" />
-        </video>
-        <div class="posicion" style="position: absolute;">
-            <h2>Se acabó jugar solo a tus juegos preferidos</h2>
-            <p>EMPIEZA YA! <i class="fas fa-angle-double-down"></i></p>
-        </div>
-    </mdb-carousel-item>
-    <mdb-carousel-item>
-        <video class="video-fluid" autoplay loop muted>
-            <source src="https://media.giphy.com/media/iHU3HFN76lm43bWAdj/giphy.mp4" type="video/mp4" />
-        </video>
-        <div class="posicion" style="position: absolute;">
-            <h2>Se acabó jugar solo a tus juegos preferidos</h2>
-            <p>EMPIEZA YA!<i class="fas fa-angle-double-down"></i> </p>
-        </div>
-    </mdb-carousel-item>
-</mdb-carousel> -->
-
 <mdb-carousel [interval]="3500" class="carousel slide carousel-fade" [animation]="'fade'">
 
 
@@ -51,26 +6,26 @@
             <div class="jumbotron cero" style="height: 500px;">
                 <h1 class="display-4">Duo<span>Tracker</span></h1>
                 <p class="lead">¿Cansado de jugar solo? </p>
-                <p class="lead">Empieza ya mismo a crear y jugar partidas con gente de todo el
-                    mundo!</p>
-                <hr class="my-4">
-                <p class="lead segundo">DuoTracker es una plataforma web que permite crear partidas de los videojuegos
-                    mas
-                    populares , asi
-                    como unirte a
-                    otras ya creadas, pudiendo competir contra otros jugadores/as</p>
-                <div class="back">
-                    <a role="button">Regístrate!</a> <a role="button">Inicia sesión!</a>
+                <p class="lead" style="font-size: 1.5rem;">Busca una partida y empieza hoy mismo!
+                </p>
+
+                <div class="botones back">
+                    <p class="registro">
+                        Registrate!
+                    </p>
+                    <p class="login">Inicia sesion!</p>
                 </div>
+
             </div>
+
         </div>
     </mdb-carousel-item>
     <mdb-carousel-item>
         <div class="view w-100">
             <div class="jumbotron one" style="height: 500px;">
-                <img src="../../assets/logo_carrusel/forlogo.png" style="width: 350px; height: 200px;">
+                <img src="../../assets/logo_carrusel/2.png" style="width: 350px; height: 200px;">
                 <div class="back">
-                    <p class="lead">EXPLORAR PARTIDAS </p>
+                    <p class="lead" [routerLink]="['/juego',2]">EXPLORAR PARTIDAS </p>
                 </div>
 
             </div>
@@ -79,9 +34,9 @@
     <mdb-carousel-item>
         <div class="view w-100">
             <div class="jumbotron two" style="height: 500px;">
-                <img src="../../assets/logo_carrusel/logocall.png" style="width: 350px; height: 200px;">
+                <img src="../../assets/logo_carrusel/1.png" style="width: 350px; height: 200px;">
                 <div class="back">
-                    <p class="lead">EXPLORAR PARTIDAS </p>
+                    <p class="lead" [routerLink]="['/juego',1]">EXPLORAR PARTIDAS </p>
                 </div>
             </div>
         </div>
@@ -89,14 +44,14 @@
     <mdb-carousel-item>
         <div class="view w-100">
             <div class="jumbotron tres" style="height: 500px;">
-                <img src="../../assets/logo_carrusel/lollogo.png" style="width: 350px; height: 200px;">
+                <img src="../../assets/logo_carrusel/0.png" style="width: 350px; height: 200px;">
                 <div class="back">
-                    <p class="lead">EXPLORAR PARTIDAS </p>
+                    <p class="lead" [routerLink]="['/juego',0]">EXPLORAR PARTIDAS </p>
                 </div>
             </div>
         </div>
     </mdb-carousel-item>
-    <div class="carousel-caption" style="width: 100%;">
+    <!-- <div class="carousel-caption" style="width: 100%;">
         <h3 class="h3-responsive">One content for three backgrounds</h3>
-    </div>
+    </div> -->
 </mdb-carousel>
