--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,12 +6,14 @@ footer {
     color: white;
     text-align: center;
     width: 100%;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    
     font-family: 'Spectral','serif';
     /* margin-bottom: 0; */
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    
+    padding: 1em;
+    margin-top: 3em;
+    top: 100%
 }
 
 footer a {
