--- a/src/app/juego/juego.component.css
+++ b/src/app/juego/juego.component.css
@@ -1,3 +1,5 @@
+ @import url(https://allfont.es/allfont.css?fonts=nasalization-free); 
+
 *{
     font-style: 'Spectral', serif;
 }
@@ -176,4 +178,9 @@ h3{
 .select select{
     margin:15px 15px;
 }
-   
+.cajaPartidas{
+    margin-bottom: 10px;
+}
+.select select option{
+    font-family: 'Nasalization Free';
+} 
