--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -70,7 +70,7 @@
                 <div class="paginas">
                     <h3>pagina: {{pagina}}</h3>
                 </div>
-                <div class="col-xs-12" *ngFor="let partida of arrPartidasByJuego">
+                <div class="col-xs-12 cajaPartidas" *ngFor="let partida of arrPartidasByJuego">
                     <div class="list-group-item">
                         <div class="row">
                             <div class="col">
