--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,12 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@font-face {
+	src: url("assets/nasalization-free_[allfont.es].ttf");
+	font-family: 'Nasalization Free'
+	
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;700&display=swap');
 
 
