--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -63,7 +63,7 @@
                         <p class="fecha">{{partida?.fecha?.fecha | date:'dd/MM/yy'}}</p>
                     </div>
                     <div class="col">
-                        <img src="{{partida.imagen_rango}}">
+                        <img src={{partida.rango.imagen_rango}}>
                     </div>
                 </div>
                 <div class="row">
